<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlayerActivity">

    <TextView
            android:text="@string/label_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent" android:textSize="32sp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/label_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/textView"
            android:textSize="32sp" android:textStyle="bold" app:layout_constraintEnd_toEndOf="@+id/textView"/>
    <TextView
            android:text="@string/label_sub_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="@+id/textView2"
            android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="@+id/textView2"
            android:textSize="22sp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/textView3" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp" android:hint="@string/hint_player_one"
            android:background="@drawable/home_background" android:textColor="@color/input_text_color"
            android:textColorHint="@color/input_hint_text_color"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2"
            app:layout_constraintStart_toStartOf="@+id/editText" app:layout_constraintEnd_toEndOf="@+id/editText"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/editText"
            android:hint="@string/hint_player_two" android:background="@drawable/home_background"
            android:textColorHint="@color/input_hint_text_color" android:textColor="@color/input_text_color"/>
    <Button
            style="@style/custom_button"
            android:text="@string/button_begin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4" app:layout_constraintVertical_bias="0.98"/>
    <TextView
            android:text="@string/label_develop_by"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAlignment="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>